--- a/css/main.css
+++ b/css/main.css
@@ -5,6 +5,9 @@ body {
   font-family: "Roboto", "Noto Sans KR", sans-serif;
   word-break: keep-all;
 }
+a {
+  text-decoration: none;
+}
 
 
 /* HEADER */
@@ -20,35 +23,94 @@ header ul.menu {
   display: flex;
   justify-content: space-between;
 }
-header ul.menu li {
+header ul.menu > li {
   display: flex;
+  position: relative;
 }
-header ul.menu li a {
+header ul.menu > li > a {
   padding: 0 10px;
   font-size: 11px;
   display: flex;
   align-items: center;
   color: #F5F5F5;
   opacity: .8;
-  text-decoration: none;
 }
-header ul.menu li.apple-logo a,
-header ul.menu li.search-starter a,
-header ul.menu li.basket-starter a {
+header ul.menu > li.apple-logo > a,
+header ul.menu > li.search-starter > a,
+header ul.menu > li.basket-starter > a {
   width: 14px;
   text-indent: -9999px;
   background-repeat: no-repeat;
   background-position: center 13px;
 }
-header ul.menu li.apple-logo a {
+header ul.menu > li.apple-logo > a {
   background-image: url("../images/header_apple.svg");
 }
-header ul.menu li.search-starter a {
+header ul.menu > li.search-starter > a {
   background-image: url("../images/header_search.svg");
 }
-header ul.menu li.basket-starter a {
+header ul.menu > li.basket-starter > a {
   background-image: url("../images/header_bag.svg");
 }
-header ul.menu li a:hover {
+header ul.menu > li > a:hover {
   opacity: 1;
+}
+
+
+/* HEADER / MENU / BASKET */
+header .basket {
+  width: 290px;
+  padding: 10px 20px;
+  border: 1px solid #D2D2D2;
+  border-radius: 10px;
+  box-sizing: border-box;
+  background-color: #FFF;
+  position: absolute;
+  top: calc(100% + 4px);
+  right: -6px;
+  display: none;
+}
+header .basket.show {
+  display: block;
+}
+header .basket .arrow {
+  width: 20px;
+  height: 10px;
+  overflow: hidden;
+  position: absolute;
+  top: -10px;
+  right: 12px;
+}
+header .basket .arrow::before {
+  content: "";
+  width: 12px;
+  height: 12px;
+  border: 1px solid #D2D2D2;
+  background-color: #FFF;
+  transform: rotate(45deg);
+  transform-origin: 0 0;
+  position: absolute;
+  top: 0;
+  left: 50%;
+}
+header .basket .message {
+  padding: 30px 0;
+  font-size: 13px;
+  color: #6E6E6E;
+  text-align: center;
+}
+header .basket ul {
+  margin-top: 10px;
+}
+header .basket ul li {
+  border-top: 1px solid #D2D2D2;
+}
+header .basket ul li a {
+  display: block;
+  padding: 14px;
+  font-size: 13px;
+  color: #0071E3;
+}
+header .basket ul li a:hover {
+  text-decoration: underline;
 }
