헤더 검색 바 스크립트

--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,11 @@
 /* COMMON */
+html.fixed {
+  position: fixed;
+  overflow-y: scroll;
+  width: 100%;
+}
 body {
+  height: 10000px;
   font-size: 16px;
   line-height: 1;
   font-family: "Roboto", "Noto Sans KR", sans-serif;
@@ -128,6 +134,7 @@ header .search-wrap {
   top: 0;
   left: 0;
   width: 100%;
+  display: none;
 }
 header .search {
   max-width: 680px;
@@ -206,4 +213,7 @@ header .search .autocompletes ul li:hover a {
 }
 header.searching ul.menu > li {
   display: none;
+}
+header.searching .search-wrap {
+  display: block;
 }
