--- a/css/main.css
+++ b/css/main.css
@@ -35,6 +35,7 @@ header ul.menu {
 header ul.menu > li {
   display: flex;
   position: relative;
+  transition: .4s;
 }
 header ul.menu > li > a {
   padding: 0 10px;
@@ -134,7 +135,9 @@ header .search-wrap {
   top: 0;
   left: 0;
   width: 100%;
-  display: none;
+  visibility: hidden;
+  opacity: 0;
+  transition: .4s;
 }
 header .search {
   max-width: 680px;
@@ -211,9 +214,28 @@ header .search .autocompletes ul li:hover a {
   background-color: #F5F5F5;
   color: #0071E3;
 }
+
+header .search input,
+header .search .search-icon,
+header .search .autocompletes h3,
+header .search .autocompletes li {
+  transition: .6s;
+  transform: translate(100px, 0);
+}
+
 header.searching ul.menu > li {
-  display: none;
+  opacity: 0;
+  transform: scale(.7);
 }
 header.searching .search-wrap {
-  display: block;
+  visibility: visible;
+  opacity: 1;
+  transition-delay: .2s;
+}
+header.searching .search input,
+header.searching .search .search-icon,
+header.searching .search .autocompletes h3,
+header.searching .search .autocompletes li {
+  transition-delay: .2s;
+  transform: translate(0, 0);
 }
