--- a/css/main.css
+++ b/css/main.css
@@ -75,11 +75,27 @@ a.link:hover {
 a.link::after {
   content: " >";
 }
+.figures {
+  position: relative;
+}
+.figures figure,
+.figures figcaption {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+.figures figcaption * {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
 
 
 /* HEADER */
 header {
   background-color: #3A3A3A;
+  position: relative;
+  z-index: 9;
 }
 header .inner {
   max-width: 1020px;
@@ -304,7 +320,7 @@ nav {
   backdrop-filter: blur(20px);
   border-bottom: 1px solid #D2D2D2;
   position: sticky;
-  z-index: 8;
+  z-index: 9;
 }
 nav .inner {
   max-width: 1000px;
@@ -351,24 +367,33 @@ nav .menu li.active a:hover {
   height: 91px;
   background-image: url("../images/hero_ipad_text.png");
   text-indent: -9999px;
+  position: absolute;
+  transform: translate(624px, 235px);
+  z-index: 1;
+}
+.hero .figures {
+  height: 808px;
 }
 .hero figure {
-
-}
-.hero figure img {
-
-}
-.hero figure figcaption {
-
+  transform: translate(74px, -64px);
 }
 .hero figure figcaption .caption-camera {
-
+  width: 120px;
+  height: 84px;
+  background-image: url("../images/hero_ipad_caption_camera.png");
+  transform: translate(43px, 580px);
 }
 .hero figure figcaption .caption-chip {
-
+  width: 95px;
+  height: 43px;
+  background-image: url("../images/hero_ipad_caption_chip.png");
+  transform: translate(589px, 510px);
 }
 .hero figure figcaption .caption-storage {
-
+  width: 80px;
+  height: 43px;
+  background-image: url("../images/hero_ipad_caption_storage.png");
+  transform: translate(627px, 631px);
 }
 .hero h2 {
   width: 780px;
