--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,17 @@
 /* COMMON */
+html {
+  --color-white: #FFF;
+  --color-black: #000;
+  --color-font: #1D1D1D;
+  --color-font-darkgray: #6E6E6E;
+  --color-font-ligtgray: #F5F5F5;
+  --color-link: #0071E3;
+  --color-link-focus: #81B9F1;
+  --color-border: #D2D2D2;
+  --color-header: #3A3A3A;
+  --color-section: #F5F5F5;
+  --color-shadow: rgba(0, 0, 0, .4);
+}
 html.fixed {
   position: fixed;
   overflow-y: scroll;
@@ -10,10 +23,10 @@ body {
   line-height: 1;
   font-family: "Roboto", "Noto Sans KR", sans-serif;
   word-break: keep-all;
-  color: #1D1D1D;
+  color: var(--color-font);
 }
 a {
-  color: #1D1D1D;
+  color: var(--color-font);
   text-decoration: none;
 }
 img {
@@ -41,15 +54,15 @@ p {
   outline: none;
   font-size: 10px;
   line-height: 1;
-  color: #FFF;
-  background-color: #0071E3;
+  color: var(--color-white);
+  background-color: var(--color-link);
   cursor: pointer;
 }
 .btn:hover {
   opacity: .7;
 }
 .btn:focus {
-  box-shadow: 0 0 0 4px #81B9F1; /* x y blur spread color */
+  box-shadow: 0 0 0 4px var(--color-link-focus); /* x y blur spread color */
 }
 .bgtext {
   display: block;
@@ -65,7 +78,7 @@ p {
   gap: 40px;
 }
 a.link {
-  color: #0071E3;
+  color: var(--color-link);
   font-size: 19px;
   line-height: 1.3;
 }
@@ -93,7 +106,8 @@ a.link::after {
 
 /* HEADER */
 header {
-  background-color: #3A3A3A;
+  --header-height: 44px;
+  background-color: var(--color-header);
   position: relative;
   z-index: 9;
 }
@@ -101,7 +115,7 @@ header .inner {
   max-width: 1020px;
 }
 header ul.menu {
-  height: 44px;
+  height: var(--header-height);
   display: flex;
   justify-content: space-between;
 }
@@ -115,7 +129,7 @@ header ul.menu > li > a {
   font-size: 11px;
   display: flex;
   align-items: center;
-  color: #F5F5F5;
+  color: var(--color-font-ligtgray);
   opacity: .8;
 }
 header ul.menu > li.apple-logo > a,
@@ -144,10 +158,10 @@ header ul.menu > li > a:hover {
 header .basket {
   width: 290px;
   padding: 10px 20px;
-  border: 1px solid #D2D2D2;
+  border: 1px solid var(--color-border);
   border-radius: 10px;
   box-sizing: border-box;
-  background-color: #FFF;
+  background-color: var(--color-white);
   position: absolute;
   top: calc(100% + 4px);
   right: -6px;
@@ -171,8 +185,8 @@ header .basket .arrow::before {
   content: "";
   width: 12px;
   height: 12px;
-  border: 1px solid #D2D2D2;
-  background-color: #FFF;
+  border: 1px solid var(--color-border);
+  background-color: var(--color-white);
   transform: rotate(45deg);
   transform-origin: 0 0;
   position: absolute;
@@ -182,20 +196,20 @@ header .basket .arrow::before {
 header .basket .message {
   padding: 30px 0;
   font-size: 13px;
-  color: #6E6E6E;
+  color: var(--color-font-darkgray);
   text-align: center;
 }
 header .basket ul {
   margin-top: 10px;
 }
 header .basket ul li {
-  border-top: 1px solid #D2D2D2;
+  border-top: 1px solid var(--color-border);
 }
 header .basket ul li a {
   display: block;
   padding: 14px;
   font-size: 13px;
-  color: #0071E3;
+  color: var(--color-link);
 }
 header .basket ul li a:hover {
   text-decoration: underline;
@@ -223,26 +237,26 @@ header .search .shadow {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, .4);
+  background-color: var(--color-shadow);
 }
 header .search .textfield {
   position: relative;
 }
 header .search input {
   width: 100%;
-  height: 44px;
+  height: var(--header-height);
   padding: 0 40px;
   border: none;
   outline: none;
   box-sizing: border-box;
   background-color: transparent;
   font-size: 17px;
-  color: #FFF;
+  color: var(--color-white);
 }
 header .search .search-icon,
 header .search .search-closer {
   width: 40px;
-  height: 44px;
+  height: var(--header-height);
   background-repeat: no-repeat;
   background-position: center;
   position: absolute;
@@ -266,14 +280,14 @@ header .search .autocompletes {
   padding: 26px 40px 20px;
   border-radius: 0 0 18px 18px;
   box-sizing: border-box;
-  background-color: #FFF;
+  background-color: var(--color-white);
   position: absolute;
-  top: 44px;
+  top: var(--header-height);
   left: 0;
 }
 header .search .autocompletes h3 {
   font-size: 12px;
-  color: #6E6E6E;
+  color: var(--color-font-darkgray);
   margin-bottom: 12px;
 }
 header .search .autocompletes ul li a {
@@ -284,8 +298,8 @@ header .search .autocompletes ul li a {
   cursor: pointer;
 }
 header .search .autocompletes ul li:hover a {
-  background-color: #F5F5F5;
-  color: #0071E3;
+  background-color: var(--color-font-ligtgray);
+  color: var(--color-link);
 }
 
 header .search input,
@@ -318,7 +332,7 @@ header.searching .search .autocompletes li {
 nav {
   background-color: rgba(255, 255, 255, .7);
   backdrop-filter: blur(20px);
-  border-bottom: 1px solid #D2D2D2;
+  border-bottom: 1px solid var(--color-border);
   position: sticky;
   z-index: 9;
 }
@@ -344,20 +358,20 @@ nav .menu li a {
   font-size: 11px;
 }
 nav .menu li a:hover {
-  color: #0071E3;
+  color: var(--color-link);
 }
 nav .menu li.active a {
   opacity: .5;
   cursor: default;
 }
 nav .menu li.active a:hover {
-  color: #1D1D1D;
+  color: var(--color-font);
 }
 
 
 /* HERO */
 .hero {
-  background-color: #F5F5F5;
+  background-color: var(--color-font-ligtgray);
 }
 .hero .inner {
   padding-bottom: 110px;
@@ -415,4 +429,25 @@ nav .menu li.active a:hover {
 }
 .hero .links {
   margin-top: 30px;
+}
+
+
+/* POWER */
+.power {
+  margin-top: 110px;
+}
+.power .multiple-apps h1 {
+  width: 500px;
+  height: 280px;
+  background-image: url("../images/power_headline.png");
+  transform: translate(104px, 0);
+}
+.power .multiple-apps .figures {
+  height: 773px;
+}
+.power .multiple-apps figcaption {
+  width: 138px;
+  height: 46px;
+  background-image: url("../images/power_multiple_apps_caption.png");
+  transform: translate(703px, -47px);
 }
