power 섹션 기본 구성

--- a/css/main.css
+++ b/css/main.css
@@ -451,3 +451,27 @@ nav .menu li.active a:hover {
   background-image: url("../images/power_multiple_apps_caption.png");
   transform: translate(703px, -47px);
 }
+.power .arcade {
+
+}
+.power .arcade .figures {
+
+}
+.power .arcade figure {
+
+}
+.power .arcade figcaption {
+
+}
+.power .create {
+
+}
+.power .create .figures {
+
+}
+.power .create figure {
+
+}
+.power .create figcaption {
+  
+}
