--- a/css/main.css
+++ b/css/main.css
@@ -334,11 +334,13 @@ nav {
   backdrop-filter: blur(20px);
   border-bottom: 1px solid var(--color-border);
   position: sticky;
+  top: 0;
   z-index: 9;
 }
 nav .inner {
   max-width: 1000px;
   height: 52px;
+  margin: 0 auto;
   display: flex;
   align-items: center;
 }
@@ -473,5 +475,5 @@ nav .menu li.active a:hover {
 
 }
 .power .create figcaption {
-  
+
 }
