--- a/css/main.css
+++ b/css/main.css
@@ -88,7 +88,13 @@ a.link:hover {
 a.link::after {
   content: " >";
 }
+
+.feature {
+  display: flex;
+}
+
 .figures {
+  flex-grow: 1;
   position: relative;
 }
 .figures figure,
@@ -101,6 +107,34 @@ a.link::after {
   position: absolute;
   top: 0;
   left: 0;
+}
+
+.infos {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  z-index: 8;
+}
+.infos.infos--center {
+  justify-content: center;
+}
+.infos.infos--end {
+  justify-content: flex-end;
+}
+.info {
+  max-width: 330px;
+  margin-bottom: 24px;
+}
+.info .icon {
+  width: 100px;
+  height: 200px;
+  margin: 0 0 -15px -30px;
+  background-image: url("../images/sprite_apps.png");
+}
+.info p {
+  font-size: 21.5px;
+  font-weight: 600;
+  line-height: 1.5;
 }
 
 
@@ -453,26 +487,32 @@ nav .menu li.active a:hover {
   transform: translate(703px, -47px);
 }
 .power .arcade {
-
+  margin-top: 55px;
 }
 .power .arcade .figures {
-
+  height: 600px;
 }
 .power .arcade figure {
-
+  transform: translate(-347px, -90px);
 }
 .power .arcade figcaption {
-
+  width: 150px;
+  height: 77px;
+  background-image: url("../images/power_arcade_caption.png");
+  transform: translate(483px, 653px);
 }
 .power .create {
-
+  margin-top: 55px;
 }
 .power .create .figures {
-
+  height: 772px;
 }
 .power .create figure {
-
+  transform: translate(-25px, 50px);
 }
 .power .create figcaption {
-
+  width: 142px;
+  height: 46px;
+  background-image: url("../images/power_create_caption.png");
+  transform: translate(543px, 908px);
 }
