--- a/css/main.css
+++ b/css/main.css
@@ -543,6 +543,47 @@ nav .menu li.active a:hover {
 }
 
 
+/* DISPLAY */
+.display {
+  margin-top: 450px;
+}
+.display .notes h1 {
+  width: 630px;
+  height: 370px;
+  background-image: url("../images/display_headline.png");
+  transform: translate(104px, 0);
+}
+.display .notes .figures {
+  height: 814px;
+  margin-top: 26px;
+}
+.display .notes figcaption {
+  width: 145px;
+  height: 45px;
+  background-image: url("../images/display_notes_caption.png");
+  transform: translate(707px, -16px);
+}
+.display .shareplay {
+  margin-top: 55px;
+}
+.display .shareplay .figures {
+  height: 63px;
+}
+.display .shareplay figure {
+  transform: translate(-360px, 0);
+}
+.display .shareplay figcaption {
+  width: 110px;
+  height: 48px;
+  background-image: url("../images/display_shareplay_caption.png");
+  transform: translate(300px, 658px);
+}
+
+
+
+
+
+
 
 
 
