--- a/css/main.css
+++ b/css/main.css
@@ -161,6 +161,11 @@ a.link::after {
   font-weight: 600;
   line-height: 1.5;
 }
+.info a.link {
+  display: block;
+  margin-top: 44px;
+  font-size: 19.5px;
+}
 
 
 /* HEADER */
@@ -654,6 +659,37 @@ nav .menu li.active a:hover {
 }
 
 
+/* WIRELESS */
+.wireless {
+  margin-top: 202px;
+}
+.wireless .facetime h1 {
+  width: 730px;
+  height: 330px;
+  background-image: url("../images/wireless_headline.png");
+  transform: translate(104px, 0);
+}
+.wireless .facetime .figures {
+  height: 773px;
+}
+.wireless .facetime figure {
+  transform: translate(-68px, 0);
+}
+.wireless .facetime figcaption {
+  width: 139px;
+  height: 46px;
+  background-image: url("../images/wireless_facetime_caption.png");
+  transform: translate(843px, -49px);
+}
+.wireless .files figure {
+  transform: translate(34px, -34px);
+}
+.wireless .files figcaption {
+  width: 127px;
+  height: 46px;
+  background-image: url("../images/wireless_files_caption.png");
+  transform: translate(96px, 639px);
+}
 
 
 
