--- a/css/main.css
+++ b/css/main.css
@@ -887,6 +887,24 @@ nav .menu li.active a:hover {
 }
 
 
+/* ACCESSIBILITY */
+.accessibility {
+  margin-top: 266px;
+  margin-bottom: 170px;
+}
+.accessibility h1 {
+  width: 384px;
+  height: 270px;
+  background-image: url("../images/accessibility_headline.png");
+}
+.accessibility .infos {
+  margin-top: 20px;
+}
+.accessibility figure {
+  transform: translate(470px, -620px);
+}
+
+
 
 
 @keyframes sprite-icon {
