--- a/css/main.css
+++ b/css/main.css
@@ -966,6 +966,32 @@ nav .menu li.active a:hover {
 }
 
 
+/* ACCESSORY SHOP */
+.accessory-shop {
+  background-color: var(--color-section);
+  text-align: center;
+}
+.accessory-shop .whitebox {
+  padding-bottom: 0;
+}
+.accessory-shop .inner {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.accessory-shop img {
+  margin-top: 50px;
+}
+
+
+/* TRADE */
+.trade {
+  padding: 20px 20px 0;
+  background-color: var(--color-section);
+  text-align: center;
+}
+
+
 
 
 @keyframes sprite-icon {
