Footer - 주의사항 각주

--- a/css/main.css
+++ b/css/main.css
@@ -37,6 +37,11 @@ img {
 p {
   line-height: 1.6;
 }
+sup {
+  margin-right: 6px;
+  font-size: .7em;
+  vertical-align: top;
+}
 .inner {
   max-width: 980px;
   margin: 0 auto;
@@ -1077,6 +1082,23 @@ footer .buy-info p {
 footer .buy-info a.link {
   font-size: 14px;
 }
+
+footer .warning {
+  padding: 10px 0 10px;
+  border-top: 1px solid var(--color-border);
+  border-bottom: 1px solid var(--color-border);
+}
+footer .warning ol {
+  list-style: decimal;
+  padding-left: 16px;
+}
+footer .warning li {
+  margin-bottom: 10px;
+  font-size: 11px;
+  line-height: 1.5;
+  color: var(--color-font-darkgray);
+}
+
 
 
 
