--- a/css/main.css
+++ b/css/main.css
@@ -1133,6 +1133,35 @@ footer .breadcrumbs a:last-child:after {
   display: none;
 }
 
+footer .navigations {
+  margin-bottom: 40px;
+  display: flex;
+  flex-direction: column;
+  height: 344px;
+  flex-wrap: wrap;
+  align-content: space-between;
+}
+footer .navigations .map {
+  margin-top: 24px;
+}
+footer .navigations .map:nth-child(6) {
+  padding-bottom: 100px;
+}
+footer .navigations .map h3 {
+  font-size: 12px;
+  font-weight: 600;
+}
+footer .navigations .map li {
+  margin-top: 12px;
+  font-size: 12px;
+}
+footer .navigations .map li a {
+  color: var(--color-font-darkgray);
+}
+footer .navigations .map li a:hover {
+  text-decoration: underline;
+}
+
 
 
 
